--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
+    "migration": "truffle migrate",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
