--- a/package.json
+++ b/package.json
@@ -18,14 +18,14 @@
     "chai-bignumber": "3.0.0",
     "identicon.js": "^2.3.3",
     "react": "16.8.4",
-    "react-bootstrap": "^1.0.0-beta.4",
+    "react-bootstrap": "^1.5.2",
     "react-dom": "16.8.4",
     "react-scripts": "2.1.3",
     "truffle": "5.0.5",
     "web3": "1.0.0-beta.55"
   },
   "scripts": {
-    "migration": "truffle migrate",
+    "migration": "truffle migrate --reset",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
